--- a/ben.html
+++ b/ben.html
@@ -8,10 +8,23 @@
         <a href="https://www.youtube.com/@NollywoodCenterTv">Youtube movies</a>
         <a href="mailto:nollywoodcentertv@gmail.com">gmail</a>
         <p>Welcome Nollywood lovers</p>
-        <ul>
+        <div>
+        <ul type="square">
+            <h2>Old movies</h2>
             <li>Old School</li>
             <li>One doller</li>
+            <li>Akidi</li>
+            <li>Odum</li>
         </ul>
+        <ol type="1" start="3">
+            <h2>
+                New Movies
+            </h2>
+            <li>Obidient</li>
+            <li>Dan dollar</li>
+            <li>Prof. Odogwu</li>
+        </ol>
+        </div>
 
     </body>
 </html>
