--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
         <a href="https://www.youtube.com/@NollywoodCenterTv">Youtube movies</a>
         <a href="mailto:nollywoodcentertv@gmail.com">gmail</a>
         <p>Welcome Nollywood lovers</p>
-        <div>
-        <ul type="square">
+        <div id="list">
+        <ul type="square" class="1list" >
             <h2>Old movies</h2>
             <li>Old School</li>
             <li>One doller</li>
             <li>Akidi</li>
             <li>Odum</li>
         </ul>
-        <ol type="1" start="3">
+        <ol type="1" start="3" class="2list">
             <h2>
                 New Movies
             </h2>
@@ -24,6 +24,9 @@
             <li>Dan dollar</li>
             <li>Prof. Odogwu</li>
         </ol>
+        </div>
+        <div id="media">
+            <img scr"">
         </div>
 
     </body>
