--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </ol>
         </div>
         <div id="media">
-            <img scr"">
+            <h2>Movie image</h2>
+            <img src="media/vlcsnap-2023-02-11-13h30m53s540.png" alt="movie image">
         </div>
 
     </body>
