--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
         <title>Nollywood tv</title>
     </head>
     <body>
+        <header>
+            <hgroup>
         <h1 title="Paragraph" style="color:red">Nollywood Center Tv</h1>
+         <h2> Welcome and have a nice time</h2>
+    </hgroup>
+            <nav>
+                <ul>
+                    <li><a href="#old">Old movies</a> </li>
+                    <li><a href="#new">New movies</a></li>
+                </ul>
+            </nav>
+    </header>
         <h2>Home Of Nollywood movies</h2>
         <a href="https://www.youtube.com/@NollywoodCenterTv">Youtube movies</a>
         <a href="mailto:nollywoodcentertv@gmail.com">gmail</a>
         <p>Welcome Nollywood lovers</p>
-        <div id="list">
+        <p>This is the correct website if you are looking for the <em>best movies in nigeria </em> the world at large<br>If you need <strong>Intresting and educative movies</strong>
+             you can find them here.</p>
+        <div id="old">
         <ul type="square" class="1list" >
             <h2>Old movies</h2>
             <li>Old School</li>
@@ -16,6 +29,8 @@
             <li>Akidi</li>
             <li>Odum</li>
         </ul>
+        </div>
+        <div id="new">
         <ol type="1" start="3" class="2list">
             <h2>
                 New Movies
