--- a/index.html
+++ b/index.html
@@ -39,7 +39,33 @@
             <li>Dan dollar</li>
             <li>Prof. Odogwu</li>
         </ol>
-        </div>
+    <table>
+        <tr>
+            <th>Media platform</th>
+            <th>Number</th>
+        </tr>
+        <tr>
+            <td>Youtube</td>
+            <td>4</td>
+        </tr>
+        <tr>
+            <td>facebook</td>
+            <td>4</td>
+        </tr>
+        <tr>
+            <td>tictok</td>
+            <td>1</td>
+        </tr>
+         <tr>
+            <td>twitter</td>
+            <td>1</td>
+        </tr>
+         <tr>
+            <td>Instagram</td>
+            <td>1</td>
+        </tr>
+    </table>   
+    </div>
         <div id="media">
             <h2>Movie image</h2>
             <img src="media/vlcsnap-2023-02-11-13h30m53s540.png" alt="movie image">
