--- a/index.html
+++ b/index.html
@@ -21,6 +21,41 @@
         <p>Welcome Nollywood lovers</p>
         <p>This is the correct website if you are looking for the <em>best movies in nigeria </em> the world at large<br>If you need <strong>Intresting and educative movies</strong>
              you can find them here.</p>
+             <form>
+                <h2>Login</h2>
+                <label for="username"> Username:
+                <input type="text" id="username" name="username">
+                </label>
+
+                <label for="password"> Password:
+                    <input type="text" id="password" name="password">
+                    </label>
+             </form>
+                    <form>
+                    <label for="email"> Email:
+                        <input type="email" id="email" name="email">
+                        </label>
+             </form>
+             <form>
+        <label for="selecting">
+           Your age
+           <select id="selecting">
+            <option>1-13</option>
+            <option>14-25</option>
+            <option>26-45</option>
+            <option>46-75</option>
+            <option>76-100+</option>
+           </select>
+            </label>
+    </form>  
+    <form>
+    <label for="male">Male
+        <input type="checkbox" id="male" name="Sex">
+          </label>
+          <label for="Female">Female
+            <input type="checkbox" id="Female" name="Sex">
+              </label>
+    </form>
         <div id="old">
         <ul type="square" class="1list" >
             <h2>Old movies</h2>
@@ -64,12 +99,29 @@
             <td>Instagram</td>
             <td>1</td>
         </tr>
-    </table>   
+    </table> 
     </div>
         <div id="media">
             <h2>Movie image</h2>
             <img src="media/vlcsnap-2023-02-11-13h30m53s540.png" alt="movie image">
         </div>
+        <h3>Which do you prefer</h3>
+        <form>
+            <label for="oldmovies">Old Movies
+              <input type="radio" id="oldmovies" name="moviechoice">
+                </label>
+                <label for="newmovies">New Movies
+                    <input type="radio" id="newmovies" name="moviechoice">
+                      </label>
+
+        </form>  
+        <form>
+        <label for="multilineinput"> 
+           <h4>Comments</h4>
+           <textarea rows="10" cols="15" id="multilineinput"></textarea>
+            </label>
+    </form>  
+    
         <footer>
             <h4>Amaco Investment LTD</h4>
             <h4>Contact info</h4>
