--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
     <head>
         <title>Nollywood tv</title>
+        <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <header>
             <hgroup>
-        <h1 title="Paragraph" style="color:red">Nollywood Center Tv</h1>
+        <h1>Nollywood Center Tv</h1>
          <h2> Welcome and have a nice time</h2>
     </hgroup>
             <nav>
@@ -104,6 +105,9 @@
         <div id="media">
             <h2>Movie image</h2>
             <img src="media/vlcsnap-2023-02-11-13h30m53s540.png" alt="movie image">
+            <video controls >
+                <source src="444.mp4" type="video/mp4">
+            </video>
         </div>
         <h3>Which do you prefer</h3>
         <form>
