--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <header>
+        <header id="hgroup">
             <hgroup>
         <h1>Nollywood Center Tv</h1>
          <h2> Welcome and have a nice time</h2>
@@ -15,13 +15,13 @@
                     <li><a href="#new">New movies</a></li>
                 </ul>
             </nav>
-    </header>
-        <h2>Home Of Nollywood movies</h2>
         <a href="https://www.youtube.com/@NollywoodCenterTv">Youtube movies</a>
         <a href="mailto:nollywoodcentertv@gmail.com">gmail</a>
+        </header>
         <p>Welcome Nollywood lovers</p>
         <p>This is the correct website if you are looking for the <em>best movies in nigeria </em> the world at large<br>If you need <strong>Intresting and educative movies</strong>
              you can find them here.</p>
+             <div id="Login">
              <form>
                 <h2>Login</h2>
                 <label for="username"> Username:
@@ -57,6 +57,7 @@
             <input type="checkbox" id="Female" name="Sex">
               </label>
     </form>
+    </div>
         <div id="old">
         <ul type="square" class="1list" >
             <h2>Old movies</h2>
