--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
     </div>
         <div id="media">
             <h2>Movie image</h2>
-            <img src="media/vlcsnap-2023-02-11-13h30m53s540.png" alt="movie image">
-            <video controls >
+            <img class=imageone src="media/vlcsnap-2023-02-11-13h30m53s540.png" alt="movie image">
+            <h2>Click to watch</h2>
+            <video  class="videoone" controls >
                 <source src="444.mp4" type="video/mp4">
             </video>
         </div>
