--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Nollywood tv</title>
+        <title id="title">Nollywood tv</title>
         <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
@@ -16,8 +16,8 @@
                 </ul>
             </nav>
         <a href="https://www.youtube.com/@NollywoodCenterTv">Youtube movies</a>
-        <a href="mailto:nollywoodcentertv@gmail.com">gmail</a>
-        </header>
+        <a href="mailto:nollywoodcentertv@gmail.com">gmail</a>    
+    </header>
         <p>Welcome Nollywood lovers</p>
         <p>This is the correct website if you are looking for the <em>best movies in nigeria </em> the world at large<br>If you need <strong>Intresting and educative movies</strong>
              you can find them here.</p>
