--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <title id="title">Nollywood tv</title>
+        <title>Nollywood tv</title>
         <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <header id="hgroup">
             <hgroup>
-        <h1>Nollywood Center Tv</h1>
+        <h1 class="header">Nollywood Center Tv</h1>
          <h2> Welcome and have a nice time</h2>
     </hgroup>
             <nav>
