--- a/list/list.html
+++ b/list/list.html
@@ -1,7 +1,7 @@
 <html>
     <head>
        <title>Movie list</title> 
-       <link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
+       <link href="list.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <header>
