--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
                 <ul>
                     <li><a href="#old">Old movies</a> </li>
                     <li><a href="#new">New movies</a></li>
+                   <li><a href="https://www.youtube.com/@NollywoodCenterTv">Youtube movies</a></li>
+                  <li><a href="mailto:nollywoodcentertv@gmail.com">gmail</a> </li>
+                <li><a herf="http://127.0.0.1:5500/list/list.html">Full list</a></li>
                 </ul>
             </nav>
-        <a href="https://www.youtube.com/@NollywoodCenterTv">Youtube movies</a>
-        <a href="mailto:nollywoodcentertv@gmail.com">gmail</a>    
     </header>
         <p>Welcome Nollywood lovers</p>
         <p>This is the correct website if you are looking for the <em>best movies in nigeria </em> the world at large<br>If you need <strong>Intresting and educative movies</strong>
