--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
                     <li><a href="#new">New movies</a></li>
                    <li><a href="https://www.youtube.com/@NollywoodCenterTv">Youtube movies</a></li>
                   <li><a href="mailto:nollywoodcentertv@gmail.com">gmail</a> </li>
-                <li><a herf="http://127.0.0.1:5500/list/list.html">Full list</a></li>
-                </ul>
+                <li><a href="list/list.html" target="blank">Full List</a></li>
             </nav>
     </header>
         <p>Welcome Nollywood lovers</p>
