--- a/list/list.html
+++ b/list/list.html
@@ -12,9 +12,9 @@
         <ol>
             <li>Old school</li>
             <li>Odum</li>
-            <li>one dollar</li>
-            <li>evil men</li>
-            <li>dan dollar</li>
+            <li>One dollar</li>
+            <li>Evil men</li>
+            <li>Dan dollar</li>
             <li>Obidient</li>
             <li>Cry for mercy</li>
         </ol>
