--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1 class="header">Nollywood Center Tv</h1>
          <h2> Welcome and have a nice time</h2>
     </hgroup>
-            <nav>
+            <nav id="lits">
                 <ul>
                     <li><a href="#old">Old movies</a> </li>
                     <li><a href="#new">New movies</a></li>
