--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </label>
     </form>  
     
-        <footer>
+        <footer id="footer">
             <h4>Amaco Investment LTD</h4>
             <h4>Contact info</h4>
             <h4>&copy Copyright commission</h4>
