--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Nollywood tv</title>
         <link href="styles.css" rel="stylesheet" type="text/css">
+        <script src=""
     </head>
     <body>
         <header>
