--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Nollywood tv</title>
         <link href="styles.css" rel="stylesheet" type="text/css">
-        <script src="/workspaces/iks/index.js"></script>
+        <script src="index.js"></script>
     </head>
     <body>
         <header>
