Update index.html and index.js

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
            <textarea rows="10" cols="15" id="multilineinput"></textarea>
             </label>
     </form>  
-    
-        <footer id="footer">
+    <h2 id="thanks">Thank you for visiting</h2>
+    <footer id="footer">
             <h4>Amaco Investment LTD</h4>
             <h4>Contact info</h4>
             <h4>&copy Copyright commission</h4>
