--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                    <li><a href="https://www.youtube.com/@NollywoodCenterTv">Youtube movies</a></li>
                   <li><a href="mailto:nollywoodcentertv@gmail.com">gmail</a> </li>
                 <li><a href="list/list.html" target="blank">Full List</a></li>
+                <li><a href="page2/page2.html" target="_blank"> Registration</a>  </li>
             </nav>
     </header>
         <p>Welcome Nollywood lovers</p>
