Fix formatting in page2.css and page2.html

--- a/page2/page2.html
+++ b/page2/page2.html
@@ -3,7 +3,7 @@
     <head>
     <title>Page 2</title>
     <script src="page2.js"></script>
-    <link rel="stylesheet" href="page2.css" type="text/css">
+    <link  href="page2.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
