--- a/page2/page2.html
+++ b/page2/page2.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
-    <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 2</title>
     <script src="page2.js"></script>
-    <link  href="page2.css" rel="stylesheet" type="text/css">
+    <link href="page2.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
