--- a/page2/page2.html
+++ b/page2/page2.html
@@ -1,8 +1,7 @@
-</html>!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
     <title>Page 2</title>
     <link href="page2.css" rel="stylesheet" type="text/css">
 </head>
