Update launch.json and page2.html/js

--- a/page2/page2.html
+++ b/page2/page2.html
@@ -46,10 +46,14 @@
                             <option>Other</option>
                             </select>
                     
-    </label></form></div>
+    </label>
+</form>
+</div>
+<div class="note">
     <h2>!NOTE</h2>
     <p> Please mack sure you input the correct information no fake names or identity </p>
     <p>faliure to follow the rules will earn you suspention or even being banned </p>
+</div>
 <div id="Comments">
     <form id="comment">
         <label for="comment">
