--- a/page2/page2.html
+++ b/page2/page2.html
@@ -48,6 +48,7 @@
                     
     </label>
 </form>
+<button id="submit" type="button">Submit</button>
 </div>
 <div class="note">
     <h2>!NOTE</h2>
