--- a/list/list.html
+++ b/list/list.html
@@ -18,5 +18,6 @@
             <li>Obidient</li>
             <li>Cry for mercy</li>
         </ol>
+        <script src="list\list.js"></script>
     </body>
 </html>
