--- a/list/list.html
+++ b/list/list.html
@@ -9,6 +9,7 @@
                 <h1>Nollywood Movies</h1>
             </hgroup>
         </header>
+        <div id="list">
         <ol>
             <li>Old school</li>
             <li>Odum</li>
@@ -18,6 +19,17 @@
             <li>Obidient</li>
             <li>Cry for mercy</li>
         </ol>
-        <script src="list\list.js"></script>
+        </div>
+        <div id="add">
+            <form>
+                <label for="newmovie">Add a new movie of your choice</label>
+                <input type="text" id="newmovie" placeholder="Add a new movie" name = "newmovie">
+                <button type="submit" id = "sub">Add</button>
+            </form>
+        <footer>
+            <p>&copy; 2019 Nollywood Movies</p>
+        </footer>
+
+        <script src="list.js"></script>
     </body>
 </html>
