--- a/list/list.html
+++ b/list/list.html
@@ -24,7 +24,7 @@
             <form>
                 <label for="newmovie">Add a new movie of your choice</label>
                 <input type="text" id="newmovie" placeholder="Add a new movie" name = "newmovie">
-                <button type="submit" id = "sub">Add</button>
+                <button id = "sub">Add</button>
             </form>
         <footer>
             <p>&copy; 2019 Nollywood Movies</p>
