--- a/list/list.html
+++ b/list/list.html
@@ -9,8 +9,8 @@
                 <h1>Nollywood Movies</h1>
             </hgroup>
         </header>
-        <div id="list">
-        <ol id=" ollist">
+        <div>
+        <ol id=" list">
             <li>Old school</li>
             <li>Odum</li>
             <li>One dollar</li>
@@ -20,12 +20,13 @@
             <li>Cry for mercy</li>
         </ol>
         </div>
-        <div id="add">
+        <div id="addon">
             <form>
-                <label for="newmovie">Add a new movie of your choice</label>
-                <input type="text" id="newmovie" placeholder="Add a new movie" name = "newmovie">
+                <label for="newMovie">Add a new movie of your choice</label>
+                <input type="text" id="newMovie" placeholder="Add a new movie" name = "newmovie">
                 <button id = "sub">Add</button>
             </form>
+        </div>
         <footer>
             <p>&copy; 2019 Nollywood Movies</p>
         </footer>
