--- a/list/list.html
+++ b/list/list.html
@@ -30,11 +30,20 @@
 
         </form>
     </div>
+    <div id="imageCat">
+        <img src="/media/vlcsnap-2023-02-11-13h30m53s540.png" alt="movie pic">
+        <img src="/media/vlcsnap-2023-02-11-13h33m04s529.png" alt="movie pic">
+        <img src="/media/vlcsnap-2023-07-30-14h39m56s452.png" alt="movie pic">
+        <img src="/media/vlcsnap-2023-07-30-14h48m50s084.png" alt="movie pic">
+        <img src="/media/vlcsnap-2023-08-19-00h27m50s446.png" alt="movie pic">
+        <img src="/media/vlcsnap-2023-08-31-18h11m52s547.png" alt="movie pic">
+        <img src="/media/vlcsnap-2024-01-16-14h11m33s038.png" alt="movie pic">
+    </div>
     <footer>
         <p>&copy; 2019 Nollywood Movies</p>
     </footer>
 
-    <script src="list.js"></script>
+    <script src=" list.js "></script>
 </body>
 
 </html>
