--- a/list/list.html
+++ b/list/list.html
@@ -38,6 +38,8 @@
         <img src="/media/vlcsnap-2023-08-19-00h27m50s446.png" alt="movie pic">
         <img src="/media/vlcsnap-2023-08-31-18h11m52s547.png" alt="movie pic">
         <img src="/media/vlcsnap-2024-01-16-14h11m33s038.png" alt="movie pic">
+        <button id="prev">P</button>
+        <button id="next">N</button>
     </div>
     <footer>
         <p>&copy; 2019 Nollywood Movies</p>
