--- a/list/list.html
+++ b/list/list.html
@@ -35,6 +35,15 @@
         <button id="prev">P</button>
         <button id="next">N</button>
     </div>
+    <div id="watchlist">
+        <h1>Complete your watchlist</h1>
+        <ul></ul>
+    </div>
+    <div id="addmovie">
+        <input type=text id=" newMovie " placeholder="Add new movie ">
+        <button id="botmovie ">Add</button>
+    </div>
+
     <footer>
         <p>&copy; 2019 Nollywood Movies</p>
     </footer>
