--- a/exam/test.html
+++ b/exam/test.html
@@ -21,6 +21,20 @@
     <h3> Welcome</h3>
     <p>For test purposes only</p>
     <p>This web page is for testing pourses only no other purpose</p>
+    <div id="ima">
+        <img src="\media\vlcsnap-2023-08-19-00h27m50s446.png" alt="Rituals">
+    </div>
+    <table>
+        <h3>random table</h3>
+        <tr>
+            <th>a1</th>
+            <th>b1</th>
+            <th>c1</th>
+            <th>d1</th>
+        </tr>
+    </table>
+    </caption>
+    </table>
     <footer>
         <h3 id="contact">Contact info</h3>
         <p>Phone:<a href="tel:123-456-7890">123-456-7890</a> </p>
