--- a/exam/test.html
+++ b/exam/test.html
@@ -24,7 +24,7 @@
     <div id="ima">
         <img src="\media\vlcsnap-2023-08-19-00h27m50s446.png" alt="Rituals">
     </div>
-    <table>
+    <table border="black">
         <h3>random table</h3>
         <tr>
             <th>a1</th>
@@ -32,17 +32,77 @@
             <th>c1</th>
             <th>d1</th>
         </tr>
+        <tr>
+            <td>a2</td>
+            <td>b2</td>
+            <td>c2</td>
+            <td>d2</td>
+        </tr>
+        <tr>
+            <td>a3</td>
+            <td>b3</td>
+            <td>c3</td>
+            <td>d3</td>
+        </tr>
+        <tr>
+            <td>a4</td>
+            <td>b4</td>
+            <td>c4</td>
+            <td>d4</td>
+        </tr>
     </table>
-    </caption>
-    </table>
-    <footer>
-        <h3 id="contact">Contact info</h3>
-        <p>Phone:<a href="tel:123-456-7890">123-456-7890</a> </p>
-        <p>Email:
-            <a href="mailto:ezunuowen@gmail.com">ezunuowen@gmail.com</a>
-        </p>
-        <p>&copy; 2013 Test site</p>
-    </footer>
+    <form>
+        <h2>Come Home</h2>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name">
+        <label for="cass">Class:</label>
+        <select id="cass">
+            <optgroup label="Junior">
+            <option>JS1</option>
+            <option>JS2</option>
+            <option>JS3</option>
+            </optgroup>
+            <optgroup label="Senior">
+            <option>SS1</option>
+            <option>SS2</option>
+            <option>SS3</option>
+            </optgroup>
+        </select>
+        <label for="date">Date</label>
+        <input type="date" id="date" name="date">
+        <label for="mail">E-mail</label>
+        <input type="email" id="mail" name="mail">
+        <h3>Subjects that you Offer</h3>
+        <label for="maths">Maths</label>
+        <input type="checkbox" id="maths" name="maths">
+        <label for="english">English</label>
+        <input type="checkbox" id="english" name="english">
+        <label for="physics">Physics</label>
+        <input type="checkbox" id="physics" name="physics">
+        <label for="chemistry">Chemistry</label>
+        <input type="checkbox" id="chemistry" name="chemistry">
+        <label for="biology">Biology</label>
+        <input type="checkbox" id="biology" name="biology">
+        <label for="agric">Agricultural Science</label>
+        <input type="checkbox" id="agric" name="agric">
+        <label for="french">French</label>
+        <input type="checkbox" id="french" name="french">
+        <label for="spanish">Spanish</label>
+        <input type="checkbox" id="spanish" name="spanish">
+        <h3>More information</h3>
+        <label for="info"></label>
+        <textarea id="info" id="info" cols="30" rows="10"></textarea><br>
+        <button type="submit">Submit</button>
+        <footer>
+            <h3 id="contact ">Contact info</h3>
+            <p>Phone:<a href="tel:123-456-7890 ">123-456-7890</a> </p>
+            <p>Email:
+                <a href="mailto:ezunuowen@gmail.com ">ezunuowen@gmail.com</a>
+            </p>
+            <p>&copy; 2013 Test site</p>
+        </footer>
 </body>
+
+</html>
 
 </html>
