--- a/exam/test.html
+++ b/exam/test.html
@@ -23,7 +23,7 @@
     <p>For test purposes only</p>
     <p>This web page is for testing pourses only no other purpose</p>
     <div id="ima">
-        <img src="\media\vlcsnap-2023-08-19-00h27m50s446.png" alt="Rituals">
+        <img id="pic" src="\media\vlcsnap-2023-08-19-00h27m50s446.png" alt="Rituals">
     </div>
     <table border="black">
         <h3>random table</h3>
@@ -93,7 +93,7 @@
             <input type="checkbox" id="spanish" name="spanish">
             <h3>More information</h3>
             <label for="info"></label>
-            <textarea id="info" id="info" cols="30" rows="10"></textarea><br>
+            <textarea id="info" name="info" cols="30" rows="10"></textarea><br>
             <button type="submit">Submit</button>
         </form>
     </div>
